commit katty editar employee

--- a/src/main/resources/templates/employee/listar.html
+++ b/src/main/resources/templates/employee/listar.html
@@ -1,10 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Listar Empleados</title>
+        <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+        <script th:href="@{/js/bootstrap.min.js}"></script>
     </head>
-    <body>
+    <body class="container">
+        <h2>Lista de Empleados</h2>
+        <a class="btn btn-primary mt-4 mb-4" th:href="@{'/employee/create'}">Nuevo Empleado</a>
+
+        <table class="table table-sm">
+            <tr>
+                <th>#</th>
+                <th>Nombre y Apellido</th>
+                <th>E-mail</th>
+                <th>Teléfono</th>
+                <th>ID de trabajo</th>
+                <th>Salario</th>
+                <th>ID de jefe</th>
+                <th>ID de departamento</th>
+                <th></th>
+                <th></th>
+            </tr>
+            <tr th:each="emp, i:${lista}">
+                <td th:text="${i.index +1}"></td>
+                <td th:text="${emp.first_name} + ' ' + ${emp.last_name}"></td>
+                <td th:text="${emp.email}"></td>
+                <td th:text="${emp.phone_number}"></td>
+                <td th:text="${emp.job_id}"></td>
+                <td th:text="${emp.salary}"></td>
+                <td th:text="${emp.manager_id==null}? 'Sin jefe' : ${emp.manager_id}"></td>
+                <td th:text="${emp.department_id}"></td>
+                <td><a class="btn btn-primary" th:href="@{'/employee/edit?id=' + ${emp.employeeid}}">Editar</a></td>
+                <td><a class="btn btn-danger" th:href="@{'/employee/delete?id=' + ${emp.employeeid}}">Borrar</a></td>
+            </tr>
+        </table>
         
     </body>
 </html>
