--- a/src/main/resources/templates/employee/crear.html
+++ b/src/main/resources/templates/employee/crear.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Nuevo Empleado</title>
+        <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+        <script th:href="@{/js/bootstrap.min.js}"></script>
     </head>
-    <body>
-        
+    <body class="container">
+
+        <h2>Nuevo Empleado</h2>
+        <hr/>
+
+        <form method="post" th:action="@{'/employee/save'}">
+            <div class="form-group">
+                <label for="first_name">Nombre</label>
+                <input name="first_name" type="text" class="form-control" id="first_name">
+            </div>
+            <div class="form-group">
+                <label for="last_name">Apellido</label>
+                <input name="last_name" type="text" class="form-control" id="last_name">
+            </div>
+            <div class="form-group">
+                <label for="email">E-mail</label>
+                <input name="email" type="text" class="form-control" id="email">
+            </div>
+            <div class="form-group">
+                <label for="phone_number">Teléfono</label>
+                <input name="phone_number" type="text" class="form-control" id="phone_number">
+            </div>
+
+            <div class="form-group">
+                <label for="job_id">Trabajo</label>
+                <select class="form-control" name="job_id" id="job_id">
+                    <option th:each="job : ${listaJob}" th:value="${job.jobid}" th:text="${job.jobtitle}"></option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="salary">Salary</label>
+                <input name="salary" type="text" class="form-control" id="salary">
+            </div>
+            <div class="form-group">
+                <label for="manager_id">Jefe</label>
+                <select class="form-control" name="manager_id" id="manager_id">
+                    <option value="0">---Sin Jefe---</option>
+                    <option th:each="man : ${listaMan}" th:value="${man.employeeid}" th:text="${man.first_name}+' ' +${man.last_name}"></option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="department_id">Departamento</label>
+                <select class="form-control" name="department_id" id="department_id">
+                    <option th:each="dep : ${listaDep}" th:value="${dep.department_id}" th:text="${dep.department_name}"></option>
+                </select>
+            </div>
+            <a th:href="@{'/employee/list'}" class="btn btn-danger">Cancelar</a>
+            <button type="submit" class="btn btn-primary">Registrar</button>
+        </form>
+
     </body>
 </html>
