--- a/src/main/resources/templates/employee/editar.html
+++ b/src/main/resources/templates/employee/editar.html
@@ -12,7 +12,7 @@
         <h2>Actualizar Empleado</h2>
         <hr/>
 
-        <form method="post" th:action="@{'/employee/save'}">
+        <form method="post" th:action="@{'/employees/save'}">
             <div class="form-group">
                 <label for="first_name">Nombre</label>
                 <input name="first_name" type="text" class="form-control" id="first_name" th:value="${employee.first_name}">
@@ -33,16 +33,12 @@
             <div class="form-group">
                 <label for="job_id">Trabajo</label>
                 <select class="form-control" name="job_id" id="job_id">
-                    <option th:each="job : ${listaJob}" th:selected="${employee.job_id == job.job_id}" th:value="${job.job_id}" th:text="${job.job_title}"></option>
+                    <option th:each="job : ${listaJob}" th:selected="${employee.jobid == job.jobid}" th:value="${job.jobid}" th:text="${job.jobtitle}"></option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="salary">Salary</label>
                 <input name="salary" type="text" class="form-control" id="salary" th:value="${employee.salary}">
-            </div>
-            <div class="form-group">
-                <label for="commission_pct">Comisión</label>
-                <input name="commission_pct" type="text" class="form-control" id="commission_pct" th:value="${employee.commission_pct}">
             </div>
             <div class="form-group">
                 <label for="manager_id">Jefe</label>
@@ -51,13 +47,7 @@
                     <option th:each="man : ${listaMan}"  th:selected="${employee.manager_id == man.employeeid}" th:value="${man.employeeid}" th:text="${man.first_name}+' ' +${man.last_name}"></option>
                 </select>
             </div>
-            <div class="form-group">
-                <label for="department_id">Departamento</label>
-                <select class="form-control" name="department_id" id="department_id">
-                    <option th:each="dep : ${listaDep}"  th:selected="${employee.department_id == dep.departmentid}" th:value="${dep.departmentid}" th:text="${dep.departmentname}"></option>
-                </select>
-            </div>
-            <a th:href="@{'/employee/list'}" class="btn btn-danger">Cancelar</a>
+            <a th:href="@{'/employees/list'}" class="btn btn-danger">Cancelar</a>
             <button type="submit" class="btn btn-primary">Actualizar</button>
         </form>
 
