commit katty minicomit

--- a/src/main/resources/templates/employee/listar.html
+++ b/src/main/resources/templates/employee/listar.html
@@ -27,7 +27,7 @@
                 <td th:text="${emp.first_name} + ' ' + ${emp.last_name}"></td>
                 <td th:text="${emp.email}"></td>
                 <td th:text="${emp.phone_number}"></td>
-                <td th:text="${emp.job_id}"></td>
+                <td th:text="${emp.jobid}"></td>
                 <td th:text="${emp.salary}"></td>
                 <td th:text="${emp.manager_id==null}? 'Sin jefe' : ${emp.manager_id}"></td>
                 <td th:text="${emp.department_id}"></td>
