commit katty FINAL attr y busqueda employee

--- a/src/main/resources/templates/employee/crear.html
+++ b/src/main/resources/templates/employee/crear.html
@@ -43,7 +43,7 @@
                 <label for="manager_id">Jefe</label>
                 <select class="form-control" name="manager_id" id="manager_id">
                     <option value="0">---Sin Jefe---</option>
-                    <option th:each="man : ${listaMan}" th:value="${man.employeeid}" th:text="${man.first_name}+' ' +${man.last_name}"></option>
+                    <option th:each="man : ${listaMan}" th:value="${man.employeeid}" th:text="${man.firstname}+' ' +${man.lastname}"></option>
                 </select>
             </div>
             <div class="form-group">
